Styles : Grid layout bugfixed

--- a/public/styles/development/layout.styl
+++ b/public/styles/development/layout.styl
@@ -1,9 +1,9 @@
 body
   display grid
   grid-template-rows repeat(3, auto) 1fr // permet à 'main' (4ème rangée) d'occuper tout l'espace vertical disponible
-  grid-template-columns 1fr minmax(0, _wrap) 1fr
+  grid-template-columns minmax(_gap, 1fr) minmax(0, _wrap) minmax(_gap, 1fr) // @bugfix @affected Chrome & Firefox @note Valeur 1fr définit si minimum car les navigateurs se comportent différement, Chrome affecte la largeur d'une gouttière, Firefox affecte à 0.
   grid-template-areas 'nav nav nav' '. header .' 'breadcrumb breadcrumb breadcrumb' '. main .' 'aside aside aside' 'footer footer footer'
-  // gap 1rem
+  //gap _gap
   min-height 100vh // Gabarit sur la totalité de la hauteur de la page, même si le contenu ne permet pas d'atteindre le fond de la page
   margin 0 // @bugfix Remove the margin @affected All browser
 
@@ -12,19 +12,19 @@ main
   padding _gap 0
   word-break break-word // @note Évite d'exploser le design sur les mots insécables, raison pour laquelle cette règle est située au niveau du layout. @todo En test.
 
-.header
-  grid-area header
-  background-color Orange
-
-.aside
-  grid-area aside
-  background-color #448aff
-
 .nav
   grid-area nav
 
+.header
+  grid-area header
+  //background-color orange
+
 .breadcrumb
   grid-area breadcrumb
+
+.aside
+  grid-area aside
+  //background-color steelBlue
 
 .footer
   grid-area footer
